SCKAN-203 feat: Move bulk action endpoints to mixin
